# quicklz

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Format.md  README.md  README.tpl  clippy.toml  rustfmt.toml
afl-fuzz/: Cargo.toml
afl-fuzz/in/: command
afl-fuzz/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compress.rs  decompress.rs
src/: lib.rs
