[package]
name = "quicklz"
version = "0.2.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = """
QuickLZ is a fast compression algorithm.
This library is an implementation of the QuickLZ format in rust.
"""
repository = "https://github.com/ReSpeak/quicklz"
documentation = "https://docs.rs/quicklz"
readme = "README.md"
keywords = ["quicklz"]
categories = ["compression"]
license = "MIT/Apache-2.0"
include = [
    "src/*",
    "README.md",
    "Cargo.toml"
]

[badges]
travis-ci = { repository = "ReSpeak/quicklz" }

[lib]
name = "quicklz"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
error-chain = "0.11"
bit-vec = "0.4"

[features]
nightly = []